--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,13 @@
             android:text="@string/amazing_service" />
 
         <RadioButton
-            android:id="@+id/option_eighteen_percent"
+            android:id="@+id/option_fifteen_percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/good_service" />
 
         <RadioButton
-            android:id="@+id/option_fifteen_percent"
+            android:id="@+id/option_ten_percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok_service" />
@@ -72,10 +72,10 @@
         app:layout_constraintTop_toBottomOf="@id/round_up_switch" />
 
     <TextView
-        android:id="@+id/tip_amount"
+        android:id="@+id/tip_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tip_amount"
+        tools:text="Tip Amount: $10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/calculate_button" />
 
