--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
             android:id="@+id/shared_bill_switch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="Shared bill tip?"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tip_options"
@@ -108,6 +108,7 @@
 
         <ImageView
             android:id="@+id/icon_number_of_payer"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:importantForAccessibility="no"
@@ -121,11 +122,14 @@
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:hint="Number of payer"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/cost_of_service"
             app:layout_constraintTop_toBottomOf="@id/shared_bill_switch">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/number_of_payer_edit_text"
+                android:focusedByDefault="true"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number" />
