--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
             android:id="@+id/number_of_payer"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:hint="Number of payer"
+            android:hint="@string/number_of_payer"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/cost_of_service"
             app:layout_constraintTop_toBottomOf="@id/shared_bill_switch">
